log

Tue 12 Mar 2024 01:04:09 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   13 | {
      | ^
Compilation failed
3f4f40e
Tue 12 Mar 2024 01:04:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
802db46
Tue 12 Mar 2024 01:07:08 AM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6f4ee08
Tue 12 Mar 2024 01:08:23 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:17: error: ‘sizeNew’ undeclared (first use in this function); did you mean ‘size’?
   45 |   printf("%i", *sizeNew);
      |                 ^~~~~~~
      |                 size
exercises.c:45:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5e4b31c
Tue 12 Mar 2024 01:08:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
558dc76
Tue 12 Mar 2024 01:08:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
c323bee
Tue 12 Mar 2024 01:13:35 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:50:26: error: implicit declaration of function ‘rellloc’; did you mean ‘realloc’? [-Werror=implicit-function-declaration]
   50 |       newArray = (int *) rellloc(newArray, sizeof(int) * (*newSize + 1));
      |                          ^~~~~~~
      |                          realloc
exercises.c:50:18: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   50 |       newArray = (int *) rellloc(newArray, sizeof(int) * (*newSize + 1));
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
4624501
Tue 12 Mar 2024 01:13:48 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
348b1e9
Tue 12 Mar 2024 01:14:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
fb43c75
Tue 12 Mar 2024 01:16:42 AM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
969c0f6
Tue 12 Mar 2024 01:18:08 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 30/70
4029f13
Tue 12 Mar 2024 01:19:22 AM UTC: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|4
total_score: 30/70
3e51441
Tue 12 Mar 2024 01:19:37 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c95d866
Tue 12 Mar 2024 01:20:00 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
54cb0de
Tue 12 Mar 2024 01:20:14 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
d2f5da4
Tue 12 Mar 2024 01:24:11 AM UTC: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
295ef5a
